# finetype

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md
.githooks/: pre-commit
.github/scripts/: download-model.sh
.github/workflows/: ci.yml  release.yml
backlog/: config.yml
backlog/decisions/: decision-001 - Validation-Precision-—-locale-only-confirmation-for-locale-specific-types.md  decision-002 - Locale-detection-strategy-—-post-hoc-validation-vs-model-based-classification.md  decision-003 - Entity-disambiguation-—-trained-column-level-classifier-over-enum-lookups-NNFT-150.md  decision-004 - Sense-Sharpen-architectural-pivot-—-from-tiered-CharCNN-cascade-to-column-level-transformer-routing.md  decision-005 - Sense-model-architecture-Architecture-A-cross-attention-over-Model2Vec-over-Architecture-B-transformer-encoder-—-NNFT-163.md  decision-006 - Sense-integration-strategy-—-flat-CharCNN-output-masking-over-per-category-retraining-NNFT-164.md  decision-007 - Taxonomy-revision-v0.5.1-finance-domain-identifier-category-type-additions-removals.md  decision-008 - format_string_alt-for-ISO-8601-variants.md
backlog/docs/: doc-004 - Decision-Use-rmcp-v1.1.0-for-FineType-MCP-server.md  doc-005 - Decision-SQL-aliases-over-DuckDB-normalize_names-for-load-command.md
backlog/milestones/: m-10 - schema-export.md  m-11 - m-11-duckdb-extension-redesign.md  m-12 - m-12-feature-augmented-charcnn.md  m-13 - m-13-architecture-evolution.md  m-6 - locale-foundation.md  m-7 - format-coverage.md  m-8 - validate-&-report.md  m-9 - json-profiling.md
backlog/tasks/: nnft-021 - Submit-DuckDB-extension-to-community-extensions.md  nnft-040 - Establish-GitTables-1M-stratified-sample-as-standard-evaluation-benchmark.md  nnft-041 - Add-per-topic-evaluation-harnesses-for-domain-specific-accuracy-tracking.md  nnft-044 - Add-user-facing-documentation-for-validation-engine-NNFT-013.md  (+232 more)
crates/finetype-build-tools/: Cargo.toml
crates/finetype-build-tools/src/: lib.rs
crates/finetype-candle-spike/: Cargo.toml
crates/finetype-candle-spike/src/: data.rs  lib.rs  models.rs  training.rs
crates/finetype-candle-spike/tests/: candle_validation.rs
crates/finetype-cli/: Cargo.toml  build.rs  labels
crates/finetype-cli/src/: main.rs
crates/finetype-cli/tests/: cli_golden.rs
crates/finetype-core/: Cargo.toml
crates/finetype-eval/: Cargo.toml
crates/finetype-eval/src/: csv_utils.rs  lib.rs  matching.rs  taxonomy.rs
crates/finetype-mcp/: Cargo.toml
crates/finetype-mcp/src/: lib.rs  resources.rs
crates/finetype-mcp/src/tools/: ddl.rs  generate.rs  infer.rs  mod.rs  profile.rs  schema.rs  taxonomy.rs  validate.rs
crates/finetype-train/: Cargo.toml
crates/finetype-train/src/: data.rs  device.rs  entity.rs  lib.rs  model2vec_prep.rs  multi_branch.rs  sense.rs  sense_train.rs  sibling_context.rs  sibling_data.rs  sibling_train.rs  training.rs  tui.rs
data/: label_remap.json
decisions/: 0001-validation-precision-locale-only-confirmation.md  0002-locale-detection-post-hoc-validation.md  0003-entity-disambiguation-trained-classifier.md  0004-sense-sharpen-architectural-pivot.md  0005-sense-architecture-a-cross-attention.md  0006-sense-integration-flat-charcnn-output-masking.md  0007-taxonomy-revision-v051.md  0008-format-string-alt-iso8601-variants.md  0009-pure-rust-via-candle.md  0010-mcp-server-via-rmcp.md  0011-rules-over-feature-augmented-model.md  0012-taxonomy-label-format.md  0013-hierarchical-classification-head.md  0014-models-on-huggingface.md  0015-charcnn-architecture-parameters.md  0016-flat-charcnn-for-duckdb-extension.md  0017-model-embedding-include-bytes.md  0018-duckdb-chunk-aware-column-classification.md  0019-model2vec-potion-base-4m.md  0020-maxsim-k3-fps-type-embeddings.md  0021-precision-per-type-eval-methodology.md  0022-training-data-1500-synthetic-samples.md  0023-taxonomy-pruning-principle.md  0024-sense-training-data-composition.md  0025-type-naming-format-not-locale.md  0026-collapsed-label-remapping.md  0027-validation-based-candidate-elimination.md  0028-hardcoded-hints-priority-over-model2vec.md  0029-sense-masking-safety-valve.md  0030-column-sample-size-100-encode-50.md  0031-table-level-schema-via-finetype-schema.md  0032-replace-validate-with-schema-driven-quality-gate.md  0033-sidecar-file-output-contract-for-validate.md  0034-remove-id-increment-header-hint.md  0035-pipeline-tracing-instrumentation.md  0036-delegate-normalize-names-to-duckdb.md  0037-eval-serves-the-engine.md  0038-supersede-v2-fixes-with-retraining.md  0039-use-all-adjudicated-distillation-rows.md  0040-sherlock-first-defer-remaining-distillation.md  (+1 more)
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ENTITY_CLASSIFIER.md  LOCALE_DETECTION_ARCHITECTURE.md  LOCALE_GUIDE.md  SENSE_AND_SHARPEN_PIPELINE.md  TAXONOMY_COMPARISON.md
eval/: config.env  eval_actionability.py  eval_profile.sql  eval_report.py  profile_eval.sh  schema_mapping.csv  schema_mapping.yaml  tier2_benchmark.csv
labels/: definitions_container.yaml  definitions_datetime.yaml  definitions_finance.yaml  definitions_geography.yaml  definitions_identity.yaml  definitions_representation.yaml  definitions_technology.yaml
models/: default
output/: llm_labels.csv
scripts/: analyze_llm_labels.py  build_tier2_benchmark.py  compare_sense_vs_finetype.py  distill_agent_prompt.py  distill_batch.py  distill_batches.sh  distill_concat.py  distill_run.py  distillation_status.py  download_cldr.sh  download_datasets.py  eval.sh  extract_cldr_patterns.py  extract_columns.py  extract_gittables.py  extract_sherlock.py  extract_sotab.py  install.sh  llm_label.py  llm_label.sh  merge_distillation.py  overnight_sherlock.sh  package.sh  prepare_model2vec.py  prepare_multibranch_data.py  prepare_sense_data.py  prepare_spike_data.py  read_ftmb.py  rescore_distillation.py  resume_distillation.sh  run_spike.sh  sample_gittables.py  score_tier2.py  sherlock_type_mapping.py  train.sh  train_entity_classifier.py  train_sense_model.py  validate_distillation.py
tests/: doc_tests.sh  helpers.sh  smoke.sh  smoke_json.sh
(+610 files in other folders)
