[package]
name = "finetype-candle-spike"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Candle ML framework — pin half to resolve known rand/half trait conflict
candle-core = "0.8"
candle-nn = "0.8"
half = "2.4"

safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Utils
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.finetype-core]
path = "../finetype-core"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "train-sense"
path = "src/bin/train_sense.rs"

[[bin]]
name = "train-entity"
path = "src/bin/train_entity.rs"
