[package]
name = "finetype-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for FineType semantic type classification"

[[bin]]
name = "finetype"
path = "src/main.rs"

[[bin]]
name = "extract-features"
path = "src/bin/extract_features.rs"

[[bin]]
name = "train-disambiguator"
path = "src/bin/train_disambiguator.rs"

[features]
default = ["cpu", "embed-models"]
cpu = ["finetype-model/cpu", "finetype-train/default"]
cuda = ["finetype-model/cuda", "finetype-train/cuda", "finetype-train/tui"]
metal = ["finetype-model/metal", "finetype-train/metal", "finetype-train/tui"]
embed-models = []

[dependencies]
finetype-core = { workspace = true }
finetype-model = { workspace = true }
finetype-train = { workspace = true }
finetype-mcp = { path = "../finetype-mcp" }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }

[build-dependencies]
ureq = { version = "2.9", features = ["tls"] }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
